k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: voting-backend
  labels:
    app: voting-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: voting-backend
  template:
    metadata:
      labels:
        app: voting-backend
    spec:
      containers:
        - name: backend
          image: 295655331805.dkr.ecr.ap-south-1.amazonaws.com/voting-backend:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: voting-backend
spec:
  selector:
    app: voting-backend
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
